<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center_horizontal" android:background="@drawable/pic_main_sys_bg">
	<TextView android:id="@+id/textView2" android:text="@string/txt_login_please"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_marginTop="20dip" android:layout_marginBottom="10dip"
		android:textSize="25sp" android:textStyle="bold"></TextView>
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip" android:layout_marginBottom="50dip" android:layout_marginTop="50dip" android:background="@drawable/round_shap_main_sys_bg">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="6dip"
			    android:layout_marginLeft="10dip"
			    android:layout_marginTop="15dip"
			    android:text="@string/login_pwd_txt"
			    android:textColor="@color/bt_foused_color"
			    android:textSize="16sp" />

			<EditText
			    android:id="@+id/et_login_pwd"
			    android:layout_width="fill_parent"
			    android:layout_height="30dp"
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:background="@drawable/edit_passwd"
			    android:hint="密码"
			    android:inputType="textPassword"
			    android:textSize="16sp" >

			</EditText>
			<LinearLayout android:orientation="horizontal"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:gravity="center_horizontal" android:layout_marginTop="8dip">

				<Button
				    android:id="@+id/bt_login_ok"
				    android:layout_width="80dp"
				    android:layout_height="50dp"
				    android:layout_gravity="right"
				    android:layout_marginRight="15dip"
				    android:background="@drawable/login_btn"
				    android:text="@string/login_bt_txt"
				    android:textColor="@color/black" />

				<Button
				    android:id="@+id/bt_login_reset"
				    android:layout_width="80dp"
				    android:layout_height="50dp"
				    android:layout_gravity="right"
				    android:layout_marginLeft="15dip"
				    android:background="@drawable/login_btn"
				    android:text="@string/txt_reset"
				    android:textColor="@color/black" />

			</LinearLayout>
		</LinearLayout>

	</FrameLayout>
</LinearLayout>
